[tool.poetry]
name = "WizSprinter"
version = "0.4.3"
description = "A semi-official WizWalker extension"
authors = ["SirOlaf <sirolaf@protonmail.com>"]
readme = "README.rst"
packages = [
    { include = "wizwalker" }
]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^0.11.3"
wizwalker = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
